alterada a estrutura de pastas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <span>+</span>
     <input type="number" id="num2" />
     <button id="somar">Somar</button>
-    <script src="/WJ/aula 1/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
